--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "sdsl-lite"]
 	path = sdsl-lite
 	url = https://github.com/simongog/sdsl-lite.git
+[submodule "stream"]
+	path = stream
+	url = https://github.com/ekg/stream.git
