--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,10 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq gcc-4.9 g++-4.9
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 60 --slave /usr/bin/g++ g++ /usr/bin/g++-4.9
+  - sudo add-apt-repository --yes ppa:kalakris/cmake
+  - sudo apt-get install -qq cmake
   - gcc --version && g++ --version
+  - cmake --version
 #  - sudo apt-get install -qq bc jq
 install: make get-deps
 script: make && make test
