--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ before_install:
   - sudo apt-get install -qq gcc-4.9 g++-4.9
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 60 --slave /usr/bin/g++ g++ /usr/bin/g++-4.9
   - sudo add-apt-repository --yes ppa:kalakris/cmake
-  - sudo apt-get install -qq cmake
+  - sudo apt-get install -qq cmake-2.8.11
+  - sudo update-alternatives --install /usr/bin/cmake /usr/bin/cmake-2.8.11 60
   - gcc --version && g++ --version
   - cmake --version
 #  - sudo apt-get install -qq bc jq
