--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "sdsl-lite"]
 	path = sdsl-lite
-	url = https://github.com/simongog/sdsl-lite.git
+	url = https://github.com/ekg/sdsl-lite.git
 [submodule "stream"]
 	path = stream
 	url = https://github.com/ekg/stream.git
