--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "sdsl-lite"]
-	path = sdsl-lite
+	path = sdsl-lite.ekg
 	url = https://github.com/simongog/sdsl-lite.git
 [submodule "stream"]
 	path = stream
