--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "sdsl-lite"]
-	path = sdsl-lite.ekg
-	url = https://github.com/simongog/sdsl-lite.git
+	path = sdsl-lite
+	url = https://github.com/simongog/sdsl-lite
 [submodule "stream"]
 	path = stream
 	url = https://github.com/ekg/stream.git
