--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ before_install:
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 60 --slave /usr/bin/g++ g++ /usr/bin/g++-4.9
   - gcc --version && g++ --version
 #  - sudo apt-get install -qq bc jq
-install: make get-deps
+install: make get-deps && source source_me.sh
 script: make && make test
