Add the DYNAMIC submodule, which was missing

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "stream"]
 	path = stream
 	url = https://github.com/vgteam/stream.git
+[submodule "DYNAMIC"]
+	path = DYNAMIC
+	url = https://github.com/vgteam/DYNAMIC.git
