--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "bash-tap"]
 	path = bash-tap
 	url = https://github.com/illusori/bash-tap.git
+[submodule "vg"]
+	path = vg
+	url = https://github.com/vgteam/vg.git
